Use comments for embed insertion

--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,7 @@
 		<meta name="apple-mobile-web-app-status-bar-style" content="default" />
 		<title>Loading&hellip;</title>
 		<style id="custom-css"></style>
-		<embed-head />
+		<!-- directus-embed-head -->
 	</head>
 	<body class="auto">
 		<noscript>
@@ -32,6 +32,6 @@
 		<div id="menu-outlet"></div>
 
 		<script type="module" src="/src/main.ts"></script>
-		<embed-body />
+		<!-- directus-embed-body -->
 	</body>
 </html>
