Render theme styles in head

--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,7 @@
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="default" />
 		<title>Loading&hellip;</title>
+		<style id="theme"></style>
 		<style id="custom-css"></style>
 		<!-- directus-embed-head -->
 	</head>
