Don't default to auto

--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,7 @@
 		<style id="custom-css"></style>
 		<!-- directus-embed-head -->
 	</head>
-	<body class="auto">
+	<body>
 		<noscript>
 			<strong>We're sorry but Directus doesn't work without JavaScript enabled. Please enable it to continue.</strong>
 		</noscript>
